added file{}, command{} and directory{}

--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -223,13 +223,17 @@
 }
 
 @UNPUBLISHED{BECKERS13,
-  author = {J.-M. Beckers and A. Barth and C. Troupin and A. Alvera-Azc\'arate},
+  author = {J.-M. Beckers and A. Barth and C. Troupin and A. Alvera-Azc\'{a}rate},
   title = {{Some approximate and efficient methods to assess error fields in
-	spatial gridding with Diva (Data Interpolating Variational Analysis)}J.
-	Atmos. Oceanic Tech.},
-  note = {submitted to J. Atmos. Oceanic Tech.},
+	spatial gridding with DIVA (Data Interpolating Variational Analysis)}},
+  note = jaot,
+  year = {2013},
+  doi = {10.1175/JTECH-D-13-00130.1},
+  journal = jaot,
   owner = {ctroupin},
-  timestamp = {2013.07.02}
+  pages = {{}},
+  timestamp = {2013.08.21},
+  volume = {{}}
 }
 
 @ARTICLE{BECKERS03,
@@ -370,6 +374,18 @@
   volume = {23},
   pages = {559-582},
   doi = {10.1016/0011-7471(76)90001-2}
+}
+
+@UNPUBLISHED{CAPET13,
+  author = {A.~Capet and C.~Troupin and J.~Carstensen and M.~Gr\'{e}goire and
+	J.-M. Beckers},
+  title = {{Recognizing temporal trends in spatial interpolation: an application
+	to the Black Sea Cold Intermediate Layer}},
+  note = {submitted to } # od,
+  year = {2013},
+  journal = od,
+  owner = {ctroupin},
+  timestamp = {2013.06.10}
 }
 
 @BOOK{CHILES99,
