--- a/6-DivaParameters.tex
+++ b/6-DivaParameters.tex
@@ -17,7 +17,7 @@ The method to evaluate $L$ is to fit the theoretical kernel of \eqref{divaformul
 
 
 
-\section{Determination of the signal-to-noise ratio}
+\section[Signal-to-noise ratio]{Determination of the signal-to-noise ratio}
 %---------------------------------------------------
 \index{Signal-to-noise ratio}
 Once the correlation length is determined, the next step is to estimate the signal-to-noise ratio. 
@@ -235,7 +235,7 @@ Finally, in case the noise is not calculated from $\Theta^2$, another estimate i
 \Delta_i^{(3)}= \frac{\noise_i}{\noise} { \left({1-\frac{1}{ N} \trace{\matr{A}}}\right)}\, \Theta,
 \label{eq:qc3}
 \end{equation}
-which can be calculatet directly from the RMS value of the misfit (or residual) and the generalized cross validator $\Theta$. This version can easily be used simultaneously with test \eqref{eq:qc2} using the results of the GCV.
+which can be calculated directly from the RMS value of the misfit (or residual) and the generalized cross validator $\Theta$. This version can easily be used simultaneously with test \eqref{eq:qc2} using the results of the GCV.
 
  
 \subsection{Normalized version}
