--- a/climatocook.tex
+++ b/climatocook.tex
@@ -193,7 +193,7 @@ Only if you are happy with the reference fields you can proceed to fine tuning.
 
 \begin{enumerate}
 \item Define climatology \file{yearlist, monthlist, varlist}
-\item Choose the reference fields you created earlier by adapting \command{constandrefe}
+\item Choose the reference fields you created earlier by adapting \file{constandrefe}
 \item Try parameter optimisation (suggested: L and SN with vertical filtering)
 \item Possibly add advection constraints and detrending
 \item Adapt meta-information to reflect climatology definition
