--- a/climatocook.tex
+++ b/climatocook.tex
@@ -199,7 +199,7 @@ Only if you are happy with the reference fields you can proceed to fine tuning.
 \item Adapt meta-information to reflect climatology definition
 \item Make the analysis
 \item Check analysis carefully. If not ok, try again with other parameters. If analysis ok, proceed further
-\item Possibly apply outlier elimination. If there are severe or a lot of outliers you might consider recalibrating signal/noise ratios after outlier elimination.
+\item Possibly apply outlier elimination (either with poor mans error or more refined versions). If there are severe or a lot of outliers you might consider recalibrating signal/noise ratios after outlier elimination.
 
 \item Perform final analysis with full error calculation ({\tt ispec -107}).
 \item Submit so-obtained climatology to experts for internal reviewing. If not ok, fine tune parameters. If ok, proceed to submit to oceanBrowser and sextant.
