new figures for gebco

--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -342,7 +342,7 @@ data points in a distance comparable to $L$. This is coherent with the idea of a
 \subsection{Resolution by Finite-Element method\label{sec:finiteelements}}
 % ------------------------------------------------------------------------
 
-Minimization of (\ref{divaformula}) is actually performed by a Finite-Element (FE) method\index{Finite-elements}, hence the need for generating a finite-element grid. 
+The minimization of (\ref{divaformula}) is actually performed by a Finite-Element (FE) method\index{Finite-elements}, hence the need for generating a finite-element grid. 
 Because the field to analyse is only defined in the water, the minimization also works only within the contours defining the coastline or more generally, the considered isobath.
 
 Thus the grid generation has to be consistent with the coasts existing in the considered region. The corresponding mathematical problem is referred to the \textit{Constrained Triangulation}. %More details about the FEM will be given in section \ref{femgrid}.
