--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -162,6 +162,10 @@ The main shell script file for generating climatologies is \command{divadoall}. 
 \section{Input data preparation}
 %-------------------------------
 
+\subsection{Data files}
+
+They must be ODV SeaDataNet compliant: https://www.bodc.ac.uk/data/codes_and_formats/odv_format/
+
 
 \subsection{Inputs for input data preparation actions}
 
